cmake_minimum_required(VERSION 3.14)
project(C__ForProgrammersPartA)

set(CMAKE_CXX_STANDARD 11)

add_executable(C__ForProgrammersPartA main.cpp)
add_executable(assignment1dot6 assignment1dot6.cpp)
add_executable(template1dot10 template1dot10.cpp)
add_executable(enum_overload2dot8 enum_overload2dot8.cpp)
add_executable(class2dot10 class2dot10.cpp)
add_executable(is_connected3dot5 is_connected3dot5.cpp)
add_executable(Dijkstra Dijkstra.cpp)
add_executable(prim prim.cpp)
add_executable(vector4dot10 vector4dot10.cpp)